<resources>
    <string name="app_name">HelloWorldKotlinXML</string>
    <string name="enter_greeting">Enter Greeting</string>
    <string name="enter_name">Enter Name</string>
    <string name="default_greeting">Default</string>
    <string name="default_btn">Default</string>
    <string name="clear_btn">Clear</string>
    <string name="hello_world">Hello, World!</string>
    <string name="hello">Hello</string>
    <string name="world">World</string>
</resources>